# bespin

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
backend/: .env  pyproject.toml  test.db
backend/app/: database.py  main.py
backend/app/console/: __init__.py  router.py
backend/app/core/: auth.py
backend/app/gateway/: README.md  __init__.py  auth.py  billing_period.py  billing_router.py  billing_seed.py  briefs.py  core_os_router.py  entitlements.py  idempotency.py  metering.py  models.py  quota.py  rbac.py  router.py  schemas.py  tools.py
backend/app/models/: __init__.py  user.py
backend/app/playground/: __init__.py  router.py
backend/app/routers/: auth.py  subscription.py
backend/app/schemas/: user.py
backend/app/services/: stripe_service.py
backend/scripts/: __init__.py  seed_db.py  smoke_core_os_v0.sh  smoke_phase0_item7.sh  smoke_phase1_task8a_actions_v0.sh
backend/tests/: test_billing.py  test_core_os.py  test_tools_invoke.py
frontend/: .env
frontend/src/: App.tsx
frontend/src/components/auth/: LoginForm.tsx  RegisterForm.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: CancelPage.tsx  SubscribePage.tsx  SuccessPage.tsx
frontend/src/types/: env.d.ts
scripts/: seed_simple.py  seed_test_data.py  smoke_phase0.sh  smoke_phase0_item3.sh  smoke_phase0_item4.sh  smoke_phase0_item5.sh  smoke_phase0_item6.sh  smoke_phase1_task8b_action_approvals.sh  smoke_phase1_task8c_action_execute.sh  smoke_phase1_task9a_tasks_v0.sh
(+4 files in other folders)
